--- a/ScannerWebApp/Views/Scanner/Index.cshtml
+++ b/ScannerWebApp/Views/Scanner/Index.cshtml
@@ -10,8 +10,8 @@
         <a class="button" asp-controller="Scanner" asp-action="GetHighPowerSwingStocks">High Power Swing</a>*@
         <a class="button" asp-controller="Scanner" asp-action="GetIntradayBoostStocks">Intraday Boost</a>
         <a class="button" asp-controller="Scanner" asp-action="GetFiftyTwoWeeksHighStocks">52 Week High</a>
-        <a class="button" asp-controller="Scanner" asp-action="AnalysisScanner">Analysis Scanner</a>
-        <a class="button" asp-controller="Scanner" asp-action="ExecutionScreener">Execution Screener</a>
+        <a class="button" asp-controller="Scanner" asp-action="AnalysisScanner">Bullish 1 Day Ago</a>
+        <a class="button" asp-controller="Scanner" asp-action="ExecutionScreener">Bullish Intraday Live</a>
        @* <a class="button" asp-controller="Scanner" asp-action="GetPoleAndFlagStocks">Pole And Flag</a>*@
         <a class="button" asp-controller="Scanner" asp-action="GetshortStocksDayAgo">Bearish 1 Day Ago</a>
       @*  <a class="button" asp-controller="Scanner" asp-action="GetRocketIntradayBearishStocks">Intraday Rocket Bullish</a>
